# research

./: .gitignore  pyproject.toml
search_report/: README.md  automation_bot.py  automation_bot_DFS.py  main.ipynb  search_combine.py  search_governance_fallback.py  search_on_company_site.py  search_on_jpx.py  search_on_nikkei.py  searcher_searxng.py  utils.py  validator_llm.py
