[project]
name = "autocollectreports"
version = "0.1.0"
description = ""
authors = [
    {name = "Hoan Ha Khai ",email = "hoan.hk@human-brain.ai"}
]
requires-python = ">=3.11"
dependencies = [
    "yfinance (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
